objects/inov8__PMT_Phase__c.object
<CustomObject>
    <description>Phases are significant events in the life-cycle of a Project. Phases can have tasks associated with them.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inov8__Daily_progress__c</fullName>
        <formula>TEXT(100/ inov8__Length__c) &amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Days_to_go__c</fullName>
        <formula>inov8__Deadline_formula__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Deadline_formula__c</fullName>
        <formula>IF(ISNULL(inov8__End_Date_Rollup__c),  IF(ISNULL( inov8__End_date_from_child__c), inov8__Project__r.inov8__Deadline_formula__c, inov8__End_date_from_child__c) , inov8__End_Date_Rollup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Duration__c</fullName>
        <formula>inov8__Deadline_formula__c -inov8__Kickoff_formula__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__End_Date_Rollup__c</fullName>
        <label>End Date Rollup</label>
        <summarizedField>inov8__PMT_Task__c.inov8__Due_Date__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__End_date_from_child__c</fullName>
        <label>End date from child</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Expected_age_of_completion__c</fullName>
        <formula>IF( TODAY() &gt;  inov8__Deadline_formula__c , 100, ( TODAY() -  inov8__Kickoff_formula__c ) *  VALUE( SUBSTITUTE( inov8__Daily_progress__c , &apos; %&apos;, &apos;&apos;)  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected % age of completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Health_Icon__c</fullName>
        <formula>IMAGE(
CASE(inov8__Phase_Health__c,
&quot;Not Started&quot;, &quot;/resource/inov8__PMT_Status_logos/Not_Started.png&quot;,
&quot;On Track&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;,
&quot;At risk&quot;, &quot;/resource/inov8__PMT_Status_logos/At_Risk.png&quot;,
&quot;Late&quot;, &quot;/resource/inov8__PMT_Status_logos/Late.png&quot;,
&quot;On Hold&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Hold.png&quot;,
&quot;Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Completed.png&quot;,
&quot;Closed, not Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Closed_not_Completed.png&quot;,
&quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;),
&quot;status icon&quot;,25,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Kickoff_formula__c</fullName>
        <formula>IF(ISNULL(inov8__Start_Date_Rollup__c),  IF(ISNULL( inov8__Start_date_from_child_project__c), inov8__Project__r.inov8__Kickoff_formula__c, inov8__Start_date_from_child_project__c) ,inov8__Start_Date_Rollup__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Length__c</fullName>
        <formula>inov8__Deadline_formula__c -  inov8__Kickoff_formula__c</formula>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Percentage_Completion_without_child__c</fullName>
        <formula>inov8__Sum_Of_Task_Completion__c/inov8__Task_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Completion without child %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Phase_Completion_Image__c</fullName>
        <formula>IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Percent_100.jpg&quot;, &quot;Completed&quot;, 10, ( inov8__Phase_Completion__c * 100 )/1.3) &amp; 
IMAGE(&quot;/resource/inov8__PMT_Status_Images/PMT_Percent_0.jpg&quot;, &quot;Zero&quot;, 10, (100 - inov8__Phase_Completion__c * 100 )/1.3) &amp; 
&apos; &apos; &amp; 
TEXT(ROUND(inov8__Phase_Completion__c * 100,0))&amp;&quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Phase_Completion__c</fullName>
        <formula>FLOOR((inov8__Sum_Weighted_perc__c / inov8__Sum_Task_Duration__c)*100)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Phase_Description__c</fullName>
        <inlineHelpText>A general description of the phase.</inlineHelpText>
        <label>Phase Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inov8__Phase_Health__c</fullName>
        <label>Phase Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                    <default>true</default>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed, not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Phase_Weighted_Perc__c</fullName>
        <formula>inov8__Sum_Task_Duration__c * inov8__Phase_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Weighted %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Phases_with_completed_tasks__c</fullName>
        <label>Phases with completed tasks</label>
        <summaryFilterItems>
            <field>inov8__PMT_Task__c.inov8__Status__c</field>
            <operation>equals</operation>
            <value>&quot;Completed&quot;, &quot;Closed, not Completed&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Project__c</fullName>
        <description>The project this phase is assigned to</description>
        <label>Project Name</label>
        <referenceTo>inov8__PMT_Project__c</referenceTo>
        <relationshipLabel>PMT Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inov8__Start_Date_Rollup__c</fullName>
        <label>Start Date Rollup</label>
        <summarizedField>inov8__PMT_Task__c.inov8__Start_Date__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Start_date_from_child_project__c</fullName>
        <label>Start date from child project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_Of_Task_Completion__c</fullName>
        <label>Sum Of Task Completion</label>
        <summarizedField>inov8__PMT_Task__c.inov8__Percentage_Completion__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_Task_Duration__c</fullName>
        <label>Sum Task Duration</label>
        <summarizedField>inov8__PMT_Task__c.inov8__Duration__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_Weighted_perc__c</fullName>
        <label>Sum Weighted %</label>
        <summarizedField>inov8__PMT_Task__c.inov8__Weighted_percentage__c</summarizedField>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inov8__Sum_of_tasks_count_child__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum of tasks count child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Task_Count__c</fullName>
        <description>Count phases for calculating average</description>
        <label>Tasks Count</label>
        <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>PMT Phase</label>
    <listViews>
        <fullName>inov8__All1</fullName>
        <columns>inov8__Health_Icon__c</columns>
        <columns>inov8__Project__c</columns>
        <columns>NAME</columns>
        <columns>inov8__Phase_Completion__c</columns>
        <columns>inov8__Deadline_formula__c</columns>
        <columns>inov8__Kickoff_formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMT Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inov8__Kickoff_before_deadline</fullName>
        <active>true</active>
        <description>Phase Start date must be earlier than end date</description>
        <errorConditionFormula>NOT(ISNULL(inov8__Start_Date_Rollup__c)) &amp;&amp; 
NOT(ISNULL(inov8__End_Date_Rollup__c)) &amp;&amp; 
inov8__Start_Date_Rollup__c&gt;inov8__End_Date_Rollup__c</errorConditionFormula>
        <errorMessage>Phase End Date must be after Phase Start date.</errorMessage>
    </validationRules>
</CustomObject>